--- a/css/default.css
+++ b/css/default.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .Liberty .nav-wrapper {
-    background-color: #1fa67a;
+    background-color: #188160;
     z-index: 1111;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
@@ -36,6 +36,14 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
 }
 
+.Liberty .nav-wrapper .navbar-brand {
+    height: 2.73rem;
+    width: 7rem;
+    background: transparent url("../img/logo.png") no-repeat scroll left center/auto 1.9rem;
+    padding: 0;
+    margin: 0;
+}
+
 .Liberty .nav-wrapper .navbar-nav {
     float: left;
     margin: 0;
@@ -49,14 +57,79 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
+.Liberty .nav-wrapper .fa {
+    margin-right: 0.5rem;
+    font-size: 1rem;
+}
+
 .Liberty .nav-wrapper .nav-link:hover, .Liberty .nav-wrapper .nav-link:focus {
-    background-color: #24c18e;
+    background-color: #20ac80;
     transition: 0.3s;
 }
 
 .navbar-nav>li>a {
     padding: 0.7rem 0.8rem;
     font-size: 1rem;
+}
+
+.Liberty .nav-wrapper .right-nav {
+    float: right;
+    text-align: left;
+}
+
+.Liberty .nav-wrapper .right-nav .portlet {
+    padding: 0.3rem 0;
+}
+
+.Liberty .nav-wrapper .right-nav .search-form {
+    display: block;
+    box-sizing: border-box;
+    width: 14rem;
+    height: 2rem;
+    padding: 0.2rem 4rem 0.2rem 6px;
+    font-size: 0.8rem;
+    line-height: inherit;
+    color: #292f33;
+    background-color: #f5f8fa;
+    border: 1px solid #1c966f;
+    border-radius: 0.4rem;
+}
+
+.Liberty .nav-wrapper .right-nav .search-icon {
+    position: absolute;
+    top: 0.5rem;
+    right: 1.7rem;
+    display: block;
+    cursor: pointer;
+}
+
+.Liberty .nav-wrapper .right-nav .go-icon {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.2rem;
+    display: block;
+    cursor: pointer;
+}
+
+.Liberty .nav-wrapper .right-nav .fa {
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border: 0;
+    color: #4f5b63;
+    font-size: 1.1rem;
+    margin: 0;
+}
+
+.Liberty .nav-wrapper .right-nav .visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
 
 .Liberty .liberty-content {
@@ -81,4 +154,8 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 1px solid #dfdfdf;
     margin-top: 1rem;
     padding-top: 1rem;
+}
+
+[tabindex="-1"]:focus {
+    outline: none;
 }
