--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Noto Sans Korean", "Noto Sans", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
+img {
+    border: 0;
+    vertical-align: middle;
+}
+
 .Liberty {
     background-color: #f5f5f5;
 }
@@ -50,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
-.Liberty .navbar-nav ul, li {
+.Liberty .navgation .navbar-nav ul, .Liberty .navgation .navbar-nav li {
     float: left;
 }
 
@@ -83,6 +88,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0.3rem 0;
     float: left;
     position: relative;
+    margin-right: 0.3rem;
 }
 
 .Liberty .nav-wrapper .right-nav .search-form {
@@ -138,14 +144,59 @@ h1, h2, h3, h4, h5, h6 {
 
 .Liberty .nav-wrapper .right-nav .nav-login {
     float: left;
-    margin-left: 1rem;
 }
 
 .Liberty .nav-wrapper .right-nav .nav-login .fa {
     color: #fff;
     font-size: 1.5rem;
-    margin: 0;
+    margin-left: 0.3rem;
+    margin-right: 0;
     padding: 0.6rem 0;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .profile-link {
+    display: block;
+    float: left;
+    padding: 0.3rem 0;
+    margin: 0 0.3rem;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .profile-img {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 0.4rem;
+    margin: 0;
+    border: 1px solid #126aed;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .login-menu {
+    right: 0;
+    left: auto;
+    border-color: #e1e8ed;
+    top: 120%;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .login-menu:before, .Liberty .nav-wrapper .right-nav .nav-login .login-menu:after {
+    bottom: 100%;
+    border: solid transparent;
+    content: " ";
+    position: absolute;
+    left: 0;
+    right: auto;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .login-menu:before {
+    border-bottom-color: #e1e8ed;
+    border-width: 0.8rem;
+    left: auto;
+    right: 2.1rem;
+}
+
+.Liberty .nav-wrapper .right-nav .nav-login .login-menu:after {
+    border-bottom-color: #fff;
+    border-width: 0.78rem;
+    left: auto;
+    right: 2.15rem;
 }
 
 .Liberty .liberty-content {
