--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,17 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Noto Sans Korean", "Noto Sans", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
+button {
+    padding: 0;
+}
+
+input[type=search] {
+    -webkit-appearance:none;
+    -webkit-border-radius: 0;
+    -webkit-padding-after: 0;
+    -webkit-padding-before: 0;
+}
+
 img {
     border: 0;
     vertical-align: middle;
@@ -19,7 +30,7 @@ img {
 
 .Liberty .nav-wrapper {
     background-color: #4188f1;
-    z-index: 1111;
+    z-index: 1001;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
@@ -102,13 +113,14 @@ img {
     color: #292f33;
     background-color: #f5f8fa;
     border: 1px solid #126aed;
-    border-radius: 0.4rem;
+    border-radius: 5px;
+    position:relative;
 }
 
 .Liberty .nav-wrapper .right-nav .search-icon {
     position: absolute;
     top: 9px;
-    right: 2rem;
+    right: 2.5rem;
     display: block;
     cursor: pointer;
 }
@@ -116,7 +128,7 @@ img {
 .Liberty .nav-wrapper .right-nav .go-icon {
     position: absolute;
     top: 9px;
-    right: 0.3rem;
+    right: 0.8rem;
     display: block;
     cursor: pointer;
 }
@@ -164,7 +176,7 @@ img {
 .Liberty .nav-wrapper .right-nav .nav-login .profile-img {
     width: 2rem;
     height: 2rem;
-    border-radius: 0.4rem;
+    border-radius: 5px;
     margin: 0;
     border: 1px solid #126aed;
 }
@@ -207,7 +219,6 @@ img {
 .Liberty .liberty-sidebar {
     float: right;
     width: 15rem;
-    margin-top: 1rem;
 }
 
 .Liberty .liberty-sidebar .liberty-right-fixed {
@@ -344,4 +355,14 @@ img {
     font-size: 1rem;
     padding: 0.5rem;
     margin-bottom: 0.7rem;
+}
+
+.dropdown-menu>li>a:hover {
+    transition: 0.3s;
+    background-image: none;
+    background-color: #e8e8e8;
+}
+
+.caret {
+    margin-left: 0.4rem;
 }
