매뉴부분 레이아웃 6.5차완성 드롭다운 메뉴 수정

--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -43,6 +43,19 @@
     .Liberty .nav-wrapper .fa {
         margin-right: 0;
     }
+
+    .navbar-nav .open .dropdown-menu {
+        position: absolute;
+        float: left;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border: 1px solid rgba(0,0,0,.15);
+        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    }
+    .navbar-nav .open .dropdown-menu .dropdown-header, .navbar-nav .open .dropdown-menu>li>a {
+        padding: 3px 20px;
+    }
 }
 
 /* Max-width: 450px; */
