메뉴 레이아웃 완성 차후 MW Echo 기능 활성화 예정 (알림) 위키 컨텐츠 부분 전반적인 레이아웃 수정 시작

--- a/css/default.css
+++ b/css/default.css
@@ -237,7 +237,7 @@ img {
 .Liberty .liberty-content .liberty-content-header {
     border: 1px solid #e1e8ed;
     border-radius: 5px 5px 0px 0px;
-    background-color: #fff;
+    background-color: #f5f8fa;
     padding: 1rem;
 }
 
