--- a/css/default_mobile.css
+++ b/css/default_mobile.css
@@ -33,6 +33,14 @@
         padding: 0.5rem;
     }
 
+    .Liberty .liberty-content .liberty-content-main {
+        padding: 0.5rem;
+    }
+
+    .Liberty .liberty-footer {
+        padding: 0.5rem;
+    }
+
     .Liberty .liberty-content {
         margin: 0;
     }
