--- a/css/default.css
+++ b/css/default.css
@@ -1,15 +1,21 @@
+/* 메인 색깔 #4188f1 */
+/* 테두리 색깔 #e1e8ed */
+
+/* 태그 수정 */
+* {
+    outline: none;
+    -webkit-appearance: none; /* iOS 잡다한 css설정 제거 */
+}
+
+html {
+    font-size: 15px;
+}
+
 body {
     font-size: 0.95rem;
-    font-family: "Noto Sans Korean", "Noto Sans", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
-ol, ul {
-    margin: 0;
-    padding: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
+body, h1, h2, h3, h4, h5 {
     font-family: "Noto Sans Korean", "Noto Sans", "Malgun Gothic", "맑은 고딕", sans-serif;
 }
 
@@ -37,190 +43,160 @@ h6 {
     font-size: 1.2rem;
 }
 
-button {
-    padding: 0;
+a:focus {
+    outline: 0;
 }
+/* 태그 수정 End */
 
-input[type=search] {
-    -webkit-appearance:none;
-    -webkit-border-radius: 0;
-    -webkit-padding-after: 0;
-    -webkit-padding-before: 0;
-}
-
-img {
-    border: 0;
-    vertical-align: middle;
-}
-
+/* 백그라운드 색 지정 */
 .Liberty {
     background-color: #f5f5f5;
 }
+/* 백그라운드 색 지정 End*/
 
+/* 컨텐츠 넓이 수정 및 가운대 정렬 */
+.Liberty .nav-wrapper .navbar, .Liberty .nav-wrapper .content-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+/* 컨텐츠 넓이 수정 및 가운대 정렬 End */
+
+/* 네비 수정 */
 .Liberty .nav-wrapper {
+    min-height: 2.8rem;
     background-color: #4188f1;
     z-index: 1001;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
-.Liberty.width-size .navbar, .Liberty.width-size .content-wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.Liberty.width-size .navbar {
-    min-height: 30px;
+.Liberty .nav-wrapper .navbar {
+    padding: 0;
     border: 0;
+    border-radius: 0;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
-.Liberty.width-size .content-wrapper {
-    margin-top: 3.27rem;
-}
-
-.Liberty .nav-wrapper .navbar-header {
-    float: left;
-}
-
-.Liberty .nav-wrapper .navbar-brand {
-    height: 2.73rem;
+.Liberty .nav-wrapper .navbar .navbar-brand {
+    height: 2.8rem;
     width: 7rem;
     background: transparent url("../img/logo.png") no-repeat scroll left center/auto 1.9rem;
     padding: 0;
     margin: 0;
-    margin-left: 1rem;
 }
 
-.Liberty .nav-wrapper .navbar-nav {
-    float: left;
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item {
     margin: 0;
 }
 
-.Liberty .navgation .navbar-nav>ul, .Liberty .navgation .navbar-nav>li {
-    float: left;
-}
-
-.Liberty .nav-wrapper .nav-link {
-    color: #fff;
-}
-
-.Liberty .nav-wrapper .fa {
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .fa {
     margin-right: 0.5rem;
     font-size: 1rem;
 }
 
-.Liberty .nav-wrapper .nav-link:hover, .Liberty .nav-wrapper .nav-link:focus {
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link {
+    color: #fff;
+    font-size: 1rem;
+    padding: 0.7rem 0.8rem;
+    line-height: 1.4rem;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link:hover, .Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link:focus {
     background-color: #71a5f4;
     transition: 0.3s;
 }
 
-.navbar-nav>li>a {
-    padding: 0.7rem 0.8rem;
-    font-size: 1rem;
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
-.Liberty .nav-wrapper {
-    float: left;
-    text-align: left;
-}
-
-.Liberty .nav-wrapper .portlet {
-    padding: 0.3rem 0;
-    float: right;
-    position: relative;
-    margin-right: 0.3rem;
-}
-
-.Liberty .nav-wrapper .search-form {
-    display: block;
-    box-sizing: border-box;
-    width: 14rem;
-    height: 2rem;
-    padding: 0.2rem 4rem 0.2rem 6px;
-    font-size: 0.8rem;
-    line-height: inherit;
-    color: #292f33;
-    background-color: #f5f8fa;
-    border: 1px solid #126aed;
-    border-radius: 5px;
-    position:relative;
-}
-
-.Liberty .nav-wrapper .search-icon {
-    position: absolute;
-    top: 0.6rem;
-    right: 2.5rem;
-    height: 17px;
-    display: block;
-    cursor: pointer;
-}
-
-.Liberty .nav-wrapper .go-icon {
-    position: absolute;
-    top: 0.6rem;
-    right: 0.8rem;
-    height: 17px;
-    display: block;
-    cursor: pointer;
-}
-
-.Liberty .nav-wrapper .pBody .fa {
-    width: auto;
-    height: 17px;
-    line-height: 0;
-    background-color: transparent;
-    border: 0;
-    color: #4f5b63;
-    font-size: 1.1rem;
-    margin: 0;
-}
-
-.Liberty .nav-wrapper .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.Liberty .nav-wrapper .nav-login {
-    float: right;
-    margin-right: 1rem;
-}
-
-.Liberty .nav-wrapper .nav-login .fa {
-    color: #fff;
-    font-size: 1.5rem;
-    margin-left: 0.3rem;
+.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .dropdown-toggle::after {
     margin-right: 0;
-    padding: 0.6rem 0;
+    margin-left: 0.35rem;
 }
 
-.Liberty .nav-wrapper .nav-login .profile-link {
-    display: block;
+.Liberty .nav-wrapper .navbar .form-inline {
+    padding: 0.4rem 0;
+}
+
+.Liberty .nav-wrapper .navbar .form-inline .form-control {
+    font-size: 0.8rem;
+    height: 2rem;
+    width: 11rem;
+    padding: 0.2rem 0.4rem;
+    border-color: #e1e8ed;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.Liberty .nav-wrapper .navbar .form-inline .form-control:focus {
+    border-right-color: #e1e8ed;
+}
+
+.Liberty .nav-wrapper .navbar .form-inline .btn {
+    color: #4f5b63;
+    padding: 0.2rem 0.4rem;
+    line-height: 22px;
+}
+
+.Liberty .nav-wrapper .navbar .form-inline .btn:hover, .Liberty .nav-wrapper .navbar .form-inline .btn:focus {
+    background-color: #4188f1;
+    border-color: #5997f3;
+    color: #fff;
+    outline: 0;
+}
+
+.Liberty .nav-wrapper .navbar .form-inline .btn .fa {
+    width: 0.9rem;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login {
+    float: right;
+    padding-left: 0.8rem;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login .fa {
+    color: #fff;
+    padding: 0.7rem 0;
+    font-size: 1.5rem;
+    line-height: 1.4rem;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login .login-menu {
     float: left;
-    padding: 0.3rem 0;
-    margin: 0 0.3rem;
+    cursor: pointer;
+    padding: 0.4rem 0;
 }
 
-.Liberty .nav-wrapper .nav-login .profile-img {
+.Liberty .nav-wrapper .navbar .navbar-login .login-menu>a:after {
+    display: none;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login .profile-img {
     width: 2rem;
     height: 2rem;
-    border-radius: 5px;
+    border-radius: 0.35rem;
     margin: 0;
-    border: 1px solid #126aed;
+    border: 1px solid #e1e8ed;
 }
 
-.Liberty .nav-wrapper .nav-login .login-menu {
-    right: 0;
-    left: auto;
-    border-color: #e1e8ed;
+.Liberty .nav-wrapper .navbar .navbar-login .logout-btn {
+    margin-left: 0.8rem;
+    display: inline-block;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu {
     top: 120%;
+    right: -1rem;
 }
 
-.Liberty .nav-wrapper .nav-login .login-menu:before, .Liberty .nav-wrapper .nav-login .login-menu:after {
+.Liberty .nav-wrapper .navbar .navbar-login .view-logout {
+    display: none;
+}
+
+.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:before, .Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:after {
     bottom: 100%;
     border: solid transparent;
     content: " ";
@@ -229,172 +205,91 @@ img {
     right: auto;
 }
 
-.Liberty .nav-wrapper .nav-login .login-menu:before {
+.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:before {
     border-bottom-color: #e1e8ed;
     border-width: 0.8rem;
     left: auto;
-    right: 2.2rem;
+    right: 1.15rem;
 }
 
-.Liberty .nav-wrapper .nav-login .login-menu:after {
+.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:after {
     border-bottom-color: #fff;
     border-width: 0.78rem;
     left: auto;
-    right: 2.2rem;
+    right: 1.15rem;
+}
+/* 네비 수정 End */
+
+/* 오른쪽 메뉴 수정 */
+/* 오른쪽 메뉴 수정 End */
+
+/* 컨텐츠 수정 */
+/* 컨텐츠 수정 End */
+
+/* 컨텐츠 하단 수정 */
+/* 컨텐츠 하단 수정 End */
+
+/* 모달 수정 */
+.Liberty .login-modal {
+
 }
 
-.Liberty .nav-wrapper .nav-login .mobile-menu {
-    display: none;
-}
-
-.Liberty .liberty-content {
-    margin-right: 16rem;
-    padding: 0rem;
-}
-
-.Liberty .liberty-sidebar {
-    float: right;
-    width: 15rem;
-}
-
-.Liberty .liberty-sidebar .liberty-right-fixed {
-    position: fixed;
-    width: 15rem;
-    background-color: #fff;
-}
-
-.Liberty .liberty-content .liberty-content-header {
-    border: 1px solid #e1e8ed;
-    border-radius: 5px 5px 0px 0px;
-    background-color: #f5f8fa;
-    /*padding: 1rem;*/
-}
-
-.Liberty .liberty-content .liberty-content-header .content-tools {
-    float: right;
-    padding-right: 1rem;
-    padding-top: 1rem;
-}
-
-.Liberty .liberty-content .liberty-content-header .content-tools .tools-btn {
-    background-image: none;
-    border-color: #e1e8ed;
-    text-shadow: none;
-    box-shadow: none;
-}
-
-.Liberty .liberty-content .liberty-content-header .content-tools .tools-btn:hover, .Liberty .liberty-content .liberty-content-header .content-tools .tools-btn:focus {
-    background-color: #4188f1;
-    color: #fff;
-    transition: 0.3s;
-}
-
-.Liberty .liberty-content .liberty-content-header .title {
-    padding: 1rem;
-}
-
-.Liberty .liberty-content .liberty-content-header .title>h1 {
-    color: #000;
-    font-weight: bold;
-}
-
-.Liberty .liberty-content .liberty-content-main {
-    border-left: 1px solid #e1e8ed;
-    border-right: 1px solid #e1e8ed;
-    background-color: #fff;
-    padding: 1rem;
-}
-
-.Liberty .liberty-footer {
-    border: 1px solid #e1e8ed;
-    border-radius: 0px 0px 5px 5px;
-    background-color: #fff;
-    padding: 1rem;
-}
-
-.Liberty .liberty-footer ul {
-    list-style-type: none;
-    list-style-image: none;
-}
-
-.Liberty .liberty-footer ul>li {
-    text-align: center;
-}
-
-[tabindex="-1"]:focus {
-    outline: none;
-}
-
-.none-outline, .none-outline:focus, .none-outline:hover {
-    outline: none;
-}
-
-.modal-login .modal-title {
-    text-align: center;
-}
-
-.modal-login .modal-dialog {
+.Liberty .login-modal .modal-sm {
     width: 25rem;
 }
 
-.modal-login .modal-dialog .modal-header {
+.Liberty .login-modal .modal-header {
     padding: 0.7rem;
 }
 
-.modal-login .alert {
-    margin-bottom: 0.7rem;
+.Liberty .login-modal .modal-title {
+    text-align: center;
+    padding-left: 1.5rem;
 }
 
-.modal-login .alert-hidden {
+.Liberty .login-modal .alert {
+    padding: 0.8rem;
+    margin-bottom: 0.8rem;
+}
+
+.Liberty .login-modal .alert-hidden {
     display: none;
 }
 
-.modal-loginform {
-    width: 20rem;
-    margin: 0 auto;
+.Liberty .login-modal .form-control {
+    margin-bottom: 0.8rem;
 }
 
-.modal-loginform .form-field {
-    display: block;
-    margin: 0 0 1rem;
-    padding: 0;
-    width: 100%;
-}
-
-.modal-loginform .form-control {
-    margin-bottom: 0.7rem;
-}
-
-.modal-loginform .modal-checkbox:not(#noop) {
+.Liberty .login-modal .modal-checkbox:not(#noop) {
     position: relative;
     display: table;
 }
 
-.modal-loginform .modal-checkbox {
+.Liberty .login-modal .modal-checkbox {
     vertical-align: middle;
     margin-bottom: 0.7rem;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) input[type="checkbox"] {
+.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"] {
     opacity: 0;
     width: 2em;
     height: 2em;
     max-width: none;
     margin: 0;
-    margin-right: 0.4em;
     display: table-cell;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) * {
+.Liberty .login-modal .modal-checkbox:not(#noop) * {
     vertical-align: middle;
     font: inherit;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) input[type="checkbox"]+label {
+.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"]+label {
+    padding-left: 0.4em;
     display: table-cell;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) input[type="checkbox"]+label::before {
+.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"]+label::before {
     -webkit-transition: 0.2s cubic-bezier(0.175,0.885,0.32,1.275);
     -moz-transition: 0.2s cubic-bezier(0.175,0.885,0.32,1.275);
     -o-transition: 0.2s cubic-bezier(0.175,0.885,0.32,1.275);
@@ -415,47 +310,66 @@ img {
     margin-top: -1em;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) input[type="checkbox"]+label:hover::before {
+.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"]+label:hover::before {
     border: 3px solid #777;
 }
 
-.modal-loginform .modal-checkbox:not(#noop) input[type="checkbox"]:checked+label::before {
+.Liberty .login-modal .modal-checkbox:not(#noop) input[type="checkbox"]:checked+label::before {
     border: 3px solid #777;
     background-image: linear-gradient(transparent,transparent),url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M4%2012l5%205L20%205%22%20stroke%3D%22%2300B78C%22%20stroke-width%3D%223%22%20fill%3D%22none%22%2F%3E%3C%2Fsvg%3E%0A);
 }
 
-.modal-loginform .btn {
-    font-size: 1rem;
-    padding: 0.5rem;
-    margin-bottom: 0.7rem;
+.Liberty .login-modal .btn {
+    margin-bottom: 0.8rem;
 }
 
-.dropdown-menu>li>a:hover {
-    transition: 0.3s;
-    background-image: none;
+.Liberty .login-modal .modal-footer {
+    display: none;
+}
+/* 모달 수정 End*/
+
+/* 부트스트랩 커스텀 */
+.dropdown-menu {
+    font-size: 0.95rem;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    border-color: #e1e8ed;
+}
+
+.dropdown-menu .dropdown-item:hover {
     background-color: #5997f3;
     color: #fff;
-}
-
-.dropdown-toggle-fix:after {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .35rem;
-    vertical-align: middle;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-left: .3em solid transparent;
-}
-
-.dropdown-right {
-    right: 0;
-    left: auto;
-}
-
-.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
-    background-color: transparent;
-    border-color: transparent;
     transition: 0.3s;
 }
+
+.dropdown-divider {
+    border-color: #e1e8ed;
+}
+
+.form-control {
+    font-size: 0.9rem;
+}
+
+.form-control:focus {
+    border-color: #66afe9;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    transition: 0.3s;
+}
+
+.btn {
+    border-color: #e1e8ed;
+    box-shadow: none;
+}
+
+.btn:hover {
+    transition: 0.3s;
+}
+
+.input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
+    z-index: 3; /* 파폭, IE 테두리관련 버그 */
+}
+
+.close:focus, .close:hover {
+    transition: 0.3s;
+}
+/* 부트스트랩 커스텀 End*/
