--- a/css/default.css
+++ b/css/default.css
@@ -49,16 +49,23 @@ ol, ul, p {
     padding: 0;
 }
 
-<<<<<<< HEAD
 ol {
     margin: 0 !important;
     margin-left: 2.2rem !important;
     margin-right: 1rem !important;
 }
 
-/* test */
-=======
->>>>>>> f8e0d09981118387205289bd31f0d94b525b65fd
+pre {
+    display: block;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f8fa;
+    border: 1px solid #e1e8ed;
+    border-radius: 0.35rem;
+    padding: 0.8rem;
+}
+
 a:focus {
     outline: 0;
 }
@@ -70,7 +77,6 @@ p {
 ul {
     list-style-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20version%3D%221.1%22%20width%3D%225%22%20height%3D%2213%22%3E%0A%3Ccircle%20cx%3D%222.5%22%20cy%3D%229.5%22%20r%3D%222.5%22%20fill%3D%22%23373a3c%22%2F%3E%0A%3C%2Fsvg%3E%0A);
 }
-<<<<<<< HEAD
 
 img {
     max-width: 100%;
@@ -91,8 +97,6 @@ th[rowspan]:after, td[rowspan]:after {
     height: 100%;
     /*background: #e0e0e0;*/
 }
-=======
->>>>>>> f8e0d09981118387205289bd31f0d94b525b65fd
 /* 태그 수정 End */
 
 /* 백그라운드 색 지정 */
@@ -630,12 +634,9 @@ th[rowspan]:after, td[rowspan]:after {
 .close:focus, .close:hover {
     transition: 0.3s;
 }
-<<<<<<< HEAD
 
 caption {
     color: #373a3c;
     caption-side: top;
 }
-=======
->>>>>>> f8e0d09981118387205289bd31f0d94b525b65fd
 /* 부트스트랩 커스텀 End*/
